--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "axios": "^0.19.0",
     "check-prop-types": "^1.1.2",
     "node-sass": "^4.12.0",
